@@ -323,6 +323,29 @@ class CSVTestCase(TestCase):
 
 
 
+    def test_access_by_name(self):
+        resource = memory.File(TEST_DATA_1)
+        handler = itools_csv.CSV()
+        handler.columns = ['name', 'url', 'number', 'date']
+        handler.schema = {'name': Unicode, 'url': URI, 'number': Integer,
+                          'date': Date}
+        handler.load_state(resource)
+
+        row = handler.get_row(1)
+        self.assertEqual(row.name, u'ruby')
+
+
+    def test_get_row_as_handler(self):
+        resource = memory.File(TEST_DATA_1)
+        handler = itools_csv.CSV()
+        handler.columns = ['name', 'url', 'number', 'date']
+        handler.schema = {'name': Unicode, 'url': URI, 'number': Integer,
+                          'date': Date}
+        handler.load_state(resource)
+
+        row = handler.get_handler('0')
+        self.assertEqual(row.name, u'ruby')
+
 
 if __name__ == '__main__':
     unittest.main()
